<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/container"
    tools:context="stellar.kade_c.com.MainActivity">


    <ImageView
        android:id="@+id/apd_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/apd_content_desc" />

    <TextView
        android:id="@+id/date_text"
        android:text="@string/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/title_text"
        android:text="@string/apd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text"
        android:id="@+id/scrollView">
        <TextView
            android:id="@+id/explenation_text"
            android:text="@string/explanation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/calendar"
        android:id="@+id/calendar_image"
        android:contentDescription="@string/calendar_content_desc"
        android:layout_toRightOf="@id/date_text"
        android:layout_above="@id/scrollView"/>

</RelativeLayout>